--- a/BraviBraian.Infra.Data/BraviBraian.Infra.Data.csproj
+++ b/BraviBraian.Infra.Data/BraviBraian.Infra.Data.csproj
@@ -61,10 +61,12 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\BaseRepository.cs" />
+    <Compile Include="Repository\ContactRepository.cs" />
+    <Compile Include="Repository\ContactTypeRepository.cs" />
+    <Compile Include="Repository\PersonRepository.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Repository\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\BraiviBraian.Domain\BraviBraian.Domain.csproj">
       <Project>{5aa63c46-e149-42c3-b9d3-c25189b003fe}</Project>
