--- a/BraviBraian.MVC/packages.config
+++ b/BraviBraian.MVC/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net462" />
+  <package id="AutoMapper" version="8.1.1" targetFramework="net462" />
   <package id="bootstrap" version="3.3.7" targetFramework="net462" />
+  <package id="EntityFramework" version="6.2.0" targetFramework="net462" />
   <package id="jQuery" version="3.3.1" targetFramework="net462" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net462" />
@@ -13,5 +15,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net462" />
   <package id="Modernizr" version="2.8.3" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net462" />
+  <package id="SimpleInjector" version="4.7.1" targetFramework="net462" />
+  <package id="SimpleInjector.Integration.Web" version="4.7.1" targetFramework="net462" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="4.7.1" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
+  <package id="WebActivator" version="1.5.3" targetFramework="net462" />
   <package id="WebGrease" version="1.6.0" targetFramework="net462" />
 </packages>
