--- a/BraviBraian.MVC/packages.config
+++ b/BraviBraian.MVC/packages.config
@@ -9,6 +9,10 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.Razor" version="3.2.4" targetFramework="net462" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net462" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net462" />
@@ -18,6 +22,7 @@
   <package id="SimpleInjector" version="4.7.1" targetFramework="net462" />
   <package id="SimpleInjector.Integration.Web" version="4.7.1" targetFramework="net462" />
   <package id="SimpleInjector.Integration.Web.Mvc" version="4.7.1" targetFramework="net462" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.7.1" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
   <package id="WebActivator" version="1.5.3" targetFramework="net462" />
   <package id="WebGrease" version="1.6.0" targetFramework="net462" />
