--- a/BraviBraian.Services.WebApi/Web.config
+++ b/BraviBraian.Services.WebApi/Web.config
@@ -67,7 +67,7 @@
     </handlers>
   <httpProtocol>
     <customHeaders>
-      <add name="Access-Control-Allow-Origin" value="http://localhost:63400" />
+      <add name="Access-Control-Allow-Origin" value="*" />
       <add name="Access-Control-Allow-Headers" value="Content-Type" />
       <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
     </customHeaders>
